--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,10 @@ __pycache__/
 venv*
 
 data/*
-result/*
 .DS_Store
+*.jpg
+result/*.jpg
+result/matches.jpg
+result/source_new.jpg
+result/target_new.jpg
+result/joint_histogram.jpg
